# little-story-maker

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.alpine  LICENSE  README.ja.md  README.md  README.zh.md  StoryCraft1 - 快捷方式.lnk  docker-compose.yml  pyproject.toml  requirements.txt  seedance20_client.py  zeelin_gateway.py
.streamlit/: config.toml
docs/: generate-creative-doc-pdf.mjs  package.json  小小故事家_创意文档.md
mobile/: README.md  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  history.tsx  index.tsx  settings.tsx
mobile/app/config/: [id].tsx
mobile/app/edit/: [id].tsx
mobile/app/export/: [id].tsx
mobile/app/preview/: [id].tsx
mobile/assets/: .gitkeep
mobile/scripts/: build-apk.bat  build-apk.ps1  download-asr-models.ps1  download-native-libs.ps1  setup-build-env.ps1  sync-default-settings.ps1
mobile/src/components/: Button.tsx  Card.tsx  Input.tsx  LoadingOverlay.tsx  VoiceIdeaInput.tsx
mobile/src/config/: constants.ts
mobile/src/theme/: index.ts
scripts/: demo_competition.py  gen_app_logo.py  gen_mobile_icons.py  run-competition-demo.ps1  run.sh  service.sh  setup.sh  start_api.bat  start_api.sh
src/: __init__.py  api_server.py  app.py
src/storycraft/: __init__.py  config.py
tests/: __init__.py
tests/test_api/: __init__.py  test_doubao.py  test_image_generator.py  test_text_generator.py  test_text_generator_mocked.py  test_tongyi.py
tests/test_core/: __init__.py  test_pdf_gen.py  test_pdf_generator.py  test_story_builder.py
tests/test_integration/: test_integration.py
(+27 files in other folders)
